--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html lang="pt-BR">
 	<head>
 		<meta charset="UTF-8" />
-		<title>Campo Minado</title>
+		<title>Campo Minado - Kaviski</title>
 		<link rel="icon" type="image/png" href="./img/logo.png" />
 		<link rel="stylesheet" href="assets/css/stylesheet.css" media="all" />
 		<link href="https://fonts.googleapis.com/css?family=Baumans" rel="stylesheet" /> 
